Landing page alignment and comments fixes

--- a/app/assets/stylesheets/foundation.css
+++ b/app/assets/stylesheets/foundation.css
@@ -4973,9 +4973,9 @@ table.hover:not(.unstriped) tr:nth-of-type(even):hover {
       color: #1779ba; }
 
 .tabs-content {
-  border: 1px solid #e6e6e6;
+  //border: 1px solid #e6e6e6;
   border-top: 0;
-  background: #fefefe;
+  //background: #fefefe;
   color: #0a0a0a;
   width:90%;
   margin-left:64px;
