--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -177,8 +177,9 @@ div {
   position:absolute;
   //top:30%;
   //bottom:30%;
-  //left: 30%;
+  left: 20%;
   //right: 30%;
+  //margin-left:20%;
   font-weight:bold;
   text-align:center;
   p{
@@ -273,14 +274,14 @@ div {
   margin-bottom: 40px;
 }
 .front_div img {
-  width:1100px;
+  width:90%;
   height:400px;
   float:left;
-  margin-left:45px;
+  margin-left:3%;
 }
 .sub-heading{
     float:left;
     padding-top:33px;
-    width:1070px;
-    margin-left:95px;
+    width:87%;
+    margin-left:7%;
 }
